[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/power_crook.png" type="Texture" id=1]
[ext_resource path="res://PowerUpInfoScreen.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/Fonts/SuperLegendBoy-4w8Y.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/UI/crook_description.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 3 )

[node name="PowerUpInfoScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -87.0
margin_bottom = 87.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 480.0
margin_bottom = 174.0
color = Color( 0.2, 0.172549, 0.172549, 0.827451 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -132.0
margin_right = 132.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 33.0
margin_right = 264.0
margin_bottom = 52.0

[node name="Spacer2" type="Control" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer2"]
margin_right = 77.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer2"]
pause_mode = 2
margin_left = 81.0
margin_right = 161.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "CROOK"
uppercase = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer2"]
margin_left = 165.0
margin_right = 183.0
margin_bottom = 19.0
texture = ExtResource( 1 )

[node name="Spacer" type="Control" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer2"]
margin_left = 187.0
margin_right = 264.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 56.0
margin_right = 264.0
margin_bottom = 120.0

[node name="Spacer2" type="Control" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer3"]
margin_right = 48.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="DescriptionTexture" type="TextureRect" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer3"]
margin_left = 52.0
margin_right = 212.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="Spacer" type="Control" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer3"]
margin_left = 216.0
margin_right = 264.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 124.0
margin_right = 264.0
margin_bottom = 124.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 128.0
margin_right = 264.0
margin_bottom = 140.0
alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 12.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 115.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "Press"

[node name="InputLabel" type="Label" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 119.0
margin_right = 129.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0705882, 0.819608, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "X"
uppercase = true

[node name="DescriptionLabel" type="Label" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 133.0
margin_right = 189.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "to smile"

[node name="Spacer2" type="Control" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 193.0
margin_right = 264.0
margin_bottom = 12.0
size_flags_horizontal = 3
